crates/solidity/testing/snapshots/bindings_output/contracts/constructor_modifier/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
   ╭─[ input.sol:7:17 ]
   │
 7 │     constructor (address _addr) validAddress(_addr) {}
   │                 ───────────────────┬───────────────────  
   │                                    ╰───────────────────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     modifier validAddress(address _addr) {
   │              ──────┬─────         ──┬──  
   │                    ╰───────────────────── name: 2
   │                                     │    
   │                                     ╰──── name: 3
 3 │         assert(_addr != address(0));
   │         ───┬── ──┬──  
   │            ╰────────── ref: built-in
   │                  │    
   │                  ╰──── ref: 3
 4 │         _;
   │         ┬  
   │         ╰── ref: built-in
   │ 
 7 │     constructor (address _addr) validAddress(_addr) {}
   │     ─────┬─────  
   │          ╰─────── unresolved
───╯
[39mDefiniens:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ ╭─▶ contract Test {
   ┆ ┆   
 8 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 1
   │
   ├─[ input.sol:1:1 ]
   │
 2 │ ╭─▶     modifier validAddress(address _addr) {
   ┆ ┆   
 5 │ ├─▶     }
   │ │           
   │ ╰─────────── definiens: 2
   │
   ├─[ input.sol:1:1 ]
   │
 2 │     modifier validAddress(address _addr) {
   │                           ──────┬──────  
   │                                 ╰──────── definiens: 3
───╯
